force-app/src/objects/Framework__Fonteva_Language__c.object
<CustomObject>
    <fields>
        <fullName>Framework__Display_Name__c</fullName>
        <description>The text that displays in the language picker in the community for this language</description>
        <inlineHelpText>The text that displays in the language picker in the community for this language</inlineHelpText>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Framework__Display_Order__c</fullName>
        <description>Controls the display order for the language picker.</description>
        <inlineHelpText>Controls the display order for the language picker.</inlineHelpText>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Framework__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, language will be a selectable in the community</description>
        <inlineHelpText>When checked, language will be a selectable in the community</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Framework__Language_Code__c</fullName>
        <description>Read only - Language Code</description>
        <inlineHelpText>Read only - Language Code</inlineHelpText>
        <label>Language Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Fonteva Language</label>
    <nameField>
        <label>Fonteva Language Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fonteva Languages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>